// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly display total of 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $0.00
  </p>
</div>
`;

exports[`should correctly display total of multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling 
    $0.00
  </p>
</div>
`;
